UFArt/wwwroot/css/style.css
@media screen and (min-width: 768px) {
    .d-gallery-element-wrapper {
        width: 30%;
        margin-bottom: 2rem;
        margin-left: 1%;
        margin-right: 1%;
        height: 180px;
        display: inline-block;
    }

    .img-gallery {
        height: 100%;
        box-shadow: 0 0 20px 2px black;
    }

    .d-flags {
        padding-left: 1rem;
    }

    .image-about {
        width: 140%;
        margin-left: -20%;
        margin-top: 20%;
        float: left;
    }

    .wrapper-image-about {
        width: 15%;
        margin-left: 5%;
        text-align: center;
        height: 800px;
        display: inline-block;
        vertical-align: top;
        background-image: linear-gradient(#343a40, #FFF);
    }

    .d-about-text-wrapper {
        display: inline-block;
        width: 72%;
        margin-left: 6%;
    }

    .entry-text {
        top: 38%;
    }

        .entry-text > h1 {
            font-size: 7em;
        }

    .entry-button {
        width: 200px;
        height: 60px;
        bottom: 20%;
        margin-left: 50%;
        left: -100px;
        font-size: 1.2rem;
        line-height: 40px;
    }

    .d-newsfeed-image-wrapper {
        width: 28%;
        margin-right: 2%;
        padding: 0 20px;
        display: inline-block !important;
    }

    .d-newsfeed-text {
        width: 69%;
        display: inline-block !important;
        vertical-align: top;
    }

    .d-newsfeed-header {
        width: 69%;
        display: inline-block !important;
    }

    .d-newsfeed-timestamp {
        float: right;
        text-align: right;
        height: 0;
        width: 29%;
        display: inline-block !important;
    }

    .d-half-column {
        width: 49.5%;
        display: inline-block;
    }
}

@media screen and (max-width: 1024px) {
    .d-gallery-element-wrapper {
        width: 30%;
        margin-bottom: 2rem;
        margin-left: 1%;
        margin-right: 1%;
        height: 130px;
        display: inline-block;
    }
}

@media screen and (max-width: 768px) {
    .d-gallery-element-wrapper {
        width: 80%;
        height: 200px;
        margin-bottom: 2rem;
        margin-left: 10%;
        display: block;
    }

    .img-gallery {
        height: 100%;
        box-shadow: 0 0 20px 2px black;
    }

    .d-flags {
        padding: 0;
    }

    .image-about {
        width: 80%;
    }

    .wrapper-image-about {
        width: 100%;
        text-align: center;
        background-color: #343a40;
        margin-bottom: 5%;
    }

    .entry-text {
        top: 38%;
    }

        .entry-text > h1 {
            font-size: 4em;
        }

    .entry-button {
        width: 200px;
        height: 60px;
        bottom: 20%;
        margin-left: 50%;
        left: -100px;
        font-size: 1.25rem;
        line-height: 40px;
    }

    .d-newsfeed-image-wrapper {
        width: 80%;
        margin: 0 0 1rem 10%;
        padding: 0 20px;
        display: block !important;
    }

    .d-newsfeed-text {
        width: 100%;
        display: block !important;
    }

    .d-newsfeed-header {
        width: 100%;
        display: block !important;
    }

    .d-newsfeed-timestamp {
        display: none;
    }

    .d-half-column {
        width: 100%;
        display: block;
    }
}

@media screen and (max-width: 480px) {
    .d-gallery-element-wrapper {
        width: 80%;
        height: 140px;
        margin-bottom: 2rem;
        margin-left: 10%;
        display: block;
    }
}

@media screen and (max-height: 480px) {
    .entry-text {
        top: 20%;
    }

        .entry-text > h1 {
            font-size: 4em;
        }

    .entry-button {
        width: 140px;
        height: 40px;
        bottom: 20%;
        margin-left: 50%;
        left: -70px;
        font-size: 1rem;
        line-height: 27px;
    }
}

.image-about {
    box-shadow: 0 0 20px 5px black;
}

.wrapper-image-about {
}

.d-about-text-wrapper {
}

.d-gallery-element-wrapper {
    background-color: #DDD;
    text-align: center;
}

h1 {
    padding-bottom: 1rem;
}

.border-thick {
    border: 10px solid #343a40;
}

.border-medium {
    border: 7px solid #343a40;
}

.d-inline-block {
    display: inline-block !important;
}

html {
    height: 100%;
}

body {
    height: 90%;
}

td {
    vertical-align: bottom;
}

.h-100-px {
    height: 100px;
}

.h-100-per {
    height: 100%;
}

.h-per-10 {
    height: 10%;
}

.w-200-px {
    width: 200px;
}

.w-29 {
    width: 29%;
}

.news-header {
    font-size: 1.75rem;
}

.flag-icon {
    width: 20px;
    height: 10px;
}

.account-icon {
    width: 30px;
    height: 30px;
}

.navbar-toggler {
    background-image: url("https://urszulafigielart.blob.core.windows.net/webappstoragedotnet-imagecontainer/burger_icon.png");
    background-size: cover;
    width: 20px;
    height: 20px;
    padding: 0 !important;
    border: none !important;
    margin-right: 10px;
}

.burger-icon {
    width: 20px;
    height: 20px;
}

.d-opaque-white-bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    background-color: rgba(255,255,255,0.5);
    -moz-box-shadow: inset 0 0 300px #FFFFFF;
    -webkit-box-shadow: inset 0 0 300px #FFFFFF;
    box-shadow: inset 0 0 300px #FFFFFF;
}

.entry-button {
    position: absolute;
    margin-left: 50%;
    background-color: rgba(50, 50, 50, 0.4);
    border: none;
    box-sizing: border-box;
}

.entry-text {
    width: 100%;
    position: absolute;
    font-family: 'Shadows Into Light', cursive;
    text-align: center;
}

.img-editor {
    height: 100px;
    max-width: 200px;
}

.list-inline {
    margin-bottom: 0;
}

.w-details-image {
    width: 100%;
}

.w-details-table {
    width: 100%;
}

.w-69 {
    width: 69%;
}

.w-95 {
    width: 95%;
}

.w-99 {
    width: 99%;
}

.w-49 {
    width: 49% !important;
}

.carousel-photo {
    max-width: 100%;
    max-height: 550px;
}

.carousel {
    margin: auto;
}

.carousel-inner img {
    margin: auto;
}

.bg-white {
    background-color: white;
}

.container {
    min-height: 100%;
    box-shadow: 0 0 20px gray;
    padding: 0 !important;
}

.img-newsfeed {
    max-height: 300px;
    max-width: 100%;
    box-shadow: 0 0 20px 5px black;
}

.d-newsfeed {
    padding: 20px 0 20px 0;
    border-top: 2px solid #CCCCCC;
}

.d-newsfeed-image-wrapper {
    text-align: center;
    background-color: #343a40;
}

.d-newsfeed-timestamp {
    color: #CCCCCC;
}

@media only screen and (min-width: 1024px) {
    .d-inline-responsive {
        display: inline-block;
    }

    .test {
        vertical-align: top;
    }

    .w-details-image {
        width: 60%;
    }

    .w-details-table {
        width: 35%;
    }
}

.wrapper-image-details {
    text-align: center;
}

.img-details {
    display: inline-block;
    max-width: 100%;
    max-height: 500px;
    width: auto;
    height: auto;
    margin: auto;
    padding: auto;
}

.gallery-wrapper {
    text-align: center;
}

.gallery-pagination {
    text-align: center;
}

.d-inline-flex {
    margin: 0 auto;
}

